--- a/blog/main.css
+++ b/blog/main.css
@@ -1,6 +1,5 @@
 body{
   background-color: black;
-  color: white;
 }
         body{margin:40px auto;max-width:1000px;line-height:1.6;padding:0
          10px}h1,h2,h3{line-height:1.2}
@@ -12,11 +11,11 @@ p{
   font-size: 16px;
 }
 .typing-demo {
-  width: 12ch;
+  width: 12.5ch;
   animation: typing 2s steps(22), blink .5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
-  border-right: 10px solid;
+  border-right: 12px solid;
   font-family: monospace;
   font-size: 2em;
   color:white;
@@ -45,24 +44,16 @@ a{
   text-decoration: none;
   color:white;
 }
-.nav{
+ul{
   list-style: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
-.navs{
+li{
   float: left;
 }
 
 li a{
   padding: 16px;
 }
-.people{
-    padding: 10px;
-}
-.people li{
-    padding: 4px;
-}
-#footer{
-    font-size: 14px;
